# Flask-WhooshAlchemy3

./: .gitignore  .isort.cfg  .style.yapf  .testr.conf  AUTHORS  ChangeLog  LICENSE  README.md  flask_whooshalchemy.py  pyproject.toml  requirements.txt  scratch.py  setup.cfg  setup.py  tox.ini
flask_whooshalchemy/: __init__.py
flask_whooshalchemy3/: __init__.py
tests/: conftest.py  test_all.py  test_analyzers.py  test_simple.py
