[metadata]
name = flask-whooshalchemy3
description = Whoosh indexing capabilities for Flask-SQLAlchemy, Python 3 compatible.
long-description-content-type =
    text/markdown
description-file =
    README.md
author = Blake VandeMerwe
author-email = blakev@null.net
url = https://github.com/blakev/Flask-WhooshAlchemy3
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[files]
packages =
    flask_whooshalchemy

[extras]
test =
    werkzeug==0.16.1
    flask_testing
    testrepository
    testtools
    tox

[wheel]
universal = 1